# ADroad

./: .gitignore  AD가능성_감사_Python.md  README.md  README_code.md  cases.example.yaml  conftest.py  dROAD_기술보고서.docx  dROAD_설계계획서.md  dROAD_설계계획서_적대적검토.md  pyproject.toml  격차분석_Fortran_vs_Python.md  구현계획_P0_derisked.md  적대적검토2_미분연산_하이브리드DA.md  최종보고서.md  프레임워크_재검토_JAX_vs_PyTorch.md
droad/: __init__.py  assimilate.py  boundary.py  branches.py  config.py  deviation.py  driver.py  dual.py  jax_model.py  jax_storage.py  ledger.py  model.py  radiation.py  roadcond.py  skill_gate.py  smoothing.py  storage.py  thermal.py
examples/: demo_da.py
reports/: da_evaluation.csv  da_evaluation.md  da_evaluation_meta.json  deviation_budget_baseline.csv  deviation_budget_baseline.md  forecast_da.csv  forecast_da.md  forecast_da_fullmodel.csv  forecast_da_fullmodel.md  forecast_da_fullmodel_grid.csv  forecast_da_fullmodel_grid.md  forecast_da_fullmodel_grid_meta.json  forecast_da_fullmodel_meta.json  forecast_da_fullmodel_multi.csv  forecast_da_fullmodel_multi.md  forecast_da_fullmodel_multi_meta.json  forecast_da_fullmodel_storage_active.csv  forecast_da_fullmodel_storage_active.md  forecast_da_fullmodel_storage_active_meta.json  forecast_da_fullmodel_stress.csv  forecast_da_fullmodel_stress.md  forecast_da_fullmodel_stress_meta.json  forecast_da_grid.csv  forecast_da_grid.md  forecast_da_grid_meta.json  forecast_da_meta.json  forecast_da_multi.csv  forecast_da_multi.md  forecast_da_multi_meta.json  forecast_da_regimes.csv  forecast_da_regimes.md  forecast_da_regimes_meta.json  (+4 more)
(+134 files in other folders)
