[project]
name = "droad"
version = "0.0.1"
description = "Differentiable RoadSurf — P0 scaffold (backend-neutral NumPy first)"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["droad*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
